# Helios-Ascension

./: ARCHITECTURE.md  CONTRIBUTING.md  COPILOT_SETUP_GUIDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MODDING_GUIDE.md  MULTI_STAR_SYSTEMS.md  PERFORMANCE_IMPROVEMENTS.md  QUICK_REFERENCE_MODDING.md  README.md  ROADMAP.md  TEXTURE_IMPLEMENTATION.md  add_textures_to_ron.py  solar_system_dump.rs
.cargo/: config.toml
.config/: nextest.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/agents/: architect.agent.md  debugger.agent.md  reviewer.agent.md
.github/instructions/: code-review.instructions.md  documentation.instructions.md  performance.instructions.md  rust.instructions.md  security.instructions.md  testing.instructions.md
.github/prompts/: code-review.prompt.md  debug-issue.prompt.md  generate-docs.prompt.md  refactor-code.prompt.md  setup-component.prompt.md  write-tests.prompt.md
.github/workflows/: copilot-setup-steps.yml
assets/data/: buildings.ron  galaxy_example.ron  nearest_stars_raw.json  solar_system.ron  technologies.ron  technologies.ron.backup
assets/shaders/: grid_material.wgsl  night_material.wgsl  skybox.wgsl  star_glow.wgsl
assets/textures/: ALTERNATIVE_SOURCES.md  EXPANSION_OPPORTUNITIES.md  MULTI_LAYER_TEXTURES.md  PROCEDURAL_SYSTEM.md  README.md  SOURCES.md  TEXTURE_SOURCES.md  download_expansion_textures.sh  download_extra_textures.sh  download_highres_textures.sh  download_missing_textures.sh  download_nasa_textures.sh  download_solarsystem_scope.sh  download_textures.sh  generate_placeholders.py  redownload_missing.sh
assets/textures/celestial/asteroids/: README.md  TEXTURE_SPECS.md
assets/textures/celestial/comets/: README.md
assets/textures/ui/research/: README.md
docs/: ACTIVE_GENERATION_GUIDE.md  ASTEROID_CLASSIFICATION_SUMMARY.md  ASTRONOMY.md  ATMOSPHERE_MODEL.md  ATMOSPHERE_UI.md  ATMOSPHERE_UI_IMPLEMENTATION.md  ATMOSPHERE_UI_MOCKUP.md  BUILD_OPTIMIZATION.md  EXPANDING_SOLAR_SYSTEM.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  METALLICITY_DATA.md  MULTI_SYSTEM_QUICKSTART.md  ORBITAL_SYSTEM_FIXES.md  PROCEDURAL_GENERATION.md  QUESTIONS_ANSWERED.md  QUICKSTART.md  REALISTIC_ABUNDANCES.md  RESEARCH_MODDING.md  RESOURCES.md  RESOURCE_GENERATION_FIX.md  RESOURCE_SYSTEM.md  RESOURCE_VARIATION_EXAMPLES.md  SCIENTIFIC_SOURCES.md  SOLAR_SYSTEM_DATA.md  SOLAR_SYSTEM_RESOURCES.md  SPECTRAL_CLASSES.md  SUMMARY.md  TACTICAL_GRID.md  UI.md  UI_CHANGES.md  UNIT_CONVERSION_REFERENCE.md  USAGE_EXAMPLES.md  testing-guide.md  usability-features.md
docs/archive/: CODE_REVIEW_FIXES.md  EXPANSION_SUMMARY.md  FEATURES_IMPLEMENTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  UPGRADE_SUMMARY.md
docs/data/: nearby_stars_extended_data.json
docs/design/: ATMOSPHERE_MODEL.md  DATABASE_INTEGRATION.md  MULTI_SYSTEM_ARCHITECTURE.md  SOLAR_SYSTEM_DATA.md
docs/examples/mods/: EXAMPLE_MOD_MARS.md  EXAMPLE_MOD_NEW_BODY.md
src/: game_state.rs  lib.rs  main.rs
src/astronomy/: components.rs  ephemeris.rs  exoplanets.rs  mod.rs  multi_system.rs  multi_system_systems.rs  nearby_stars.rs  procedural.rs  systems.rs
src/colony/: components.rs  data.rs  mod.rs  systems.rs  types.rs
src/economy/: budget.rs  components.rs  generation.rs  mining.rs  mod.rs  types.rs
src/plugins/: camera.rs  comet_vfx.rs  galaxy_data.rs  grid.rs  mod.rs  solar_system.rs  solar_system_data.rs  starmap.rs  system_populator.rs  visual_effects.rs
src/render/: backdrop.rs  mod.rs
src/research/: components.rs  data.rs  mod.rs  systems.rs  types.rs
src/ui/: interaction.rs  mod.rs
tests/: atmosphere_integration_tests.rs  atmosphere_tests.rs  atmosphere_ui_tests.rs  basic_tests.rs  procedural_generation_tests.rs  solar_system_data_tests.rs  texture_system_tests.rs
