[package]
name = "helios_ascension"
version = "0.1.0"
edition = "2021"
authors = ["Helios Development Team"]
description = "A 4X Grand Strategy game inspired by Aurora 4X and Terra Invicta"
license = "MIT"

[lib]
name = "helios_ascension"
path = "src/lib.rs"

[[bin]]
name = "helios_ascension"
path = "src/main.rs"

[dependencies]
# Bevy game engine with optimized features
bevy = { version = "0.14", default-features = false, features = [
    "bevy_pbr",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_winit",
    "bevy_text",
    "bevy_ui",
] }

# Debug and development tools
bevy-inspector-egui = "0.25"

# Math and physics
glam = "0.28"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

[features]
# Default features for running the game
default = ["windowing"]
# Window system support - only needed when running the actual game
windowing = ["bevy/x11", "bevy/wayland"]

[profile.dev]
opt-level = 1
# Incremental compilation is enabled by default in dev mode, which speeds up recompilation
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
incremental = false

# Fast compile profile for development
[profile.fast]
inherits = "release"
lto = false
codegen-units = 16
strip = false

# Test profile optimized for fast test compilation and execution
[profile.test]
opt-level = 1
incremental = true

[profile.test.package."*"]
opt-level = 2

# Bevy-specific compile optimizations
[profile.dev.package.bevy_pbr]
opt-level = 3

[profile.dev.package.bevy_render]
opt-level = 3
